fix parallel box minor shift on x-axis problem

--- a/client/src/app/frontpage.css
+++ b/client/src/app/frontpage.css
@@ -8,8 +8,6 @@
     perspective: 1px;
     transform-style: preserve-3d;
     height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
     /**/
 }
 .cover-wrapper{
